--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,12 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.9'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
 
+
+    /// RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+    // RxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    // Retrofit adapter for RxJava
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+
 }
